--- a/Src/stylesheet.css
+++ b/Src/stylesheet.css
@@ -129,3 +129,23 @@
     margin: 0rem .3rem;
     cursor: pointer;
 }
+
+/* common section */
+
+.common-section{
+    display: flex;
+    max-width: 100vw;
+}
+
+/* sidebar section */
+
+.sidebar-section{
+    display: flex;
+    height: auto;
+    width: auto;
+}
+
+.sidebar-section__main-content{
+    display: flex;
+    flex-direction: column;
+}
